# ml_botting_core

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
samples/: sample_config.json  sample_prediction.py
src/ml_botting_core/: __init__.py  base.py  universal_predictor.py
src/ml_botting_core/classification/: universal_classifier_trainer.py
src/ml_botting_core/model_management/: check_models.py  download_models.py  model_manager.py
src/ml_botting_core/prediction/: prediction.py
src/ml_botting_core/universal_predictor/: universal_predictor.py
tests/: test_init.py  test_model_config.json  test_universal_predictor.py
tests/test_model_configs/: test_model_config.json
training/: Python39_Jupyter_Lab_StarterGPU.bat  Universal_Classifer_Trainer.ipynb
