[metadata]
name = ml_botting_core
version = 1.0.0
author = Ryan Susman
author_email = ryansusman@gmail.com
description = Making ML more accessible to botting apps. Solving Complex UI Challenges w/ ML.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darkmatter2222/ml_botting_core
project_urls =
    Bug Tracker = https://github.com/darkmatter2222/ml_botting_core/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
